# ClipVault

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  style.css
frontend/src/: main.js
src/: assets.rs  clip.rs  crypto.rs  img.rs  main.rs  parser.rs  paths.rs  prefs.rs  singleton.rs  storage.rs  tray.rs  types.rs  ui.rs
src-tauri/: tauri.conf.json
