[package]
name = "ClipVault"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.0"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
image = "0.25.6"
png = "0.17.16"
base64 = "0.22.1"
anyhow = "1.0.98"
blake3 = "1.8.2"
