[package]
name = "ClipVault"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.0"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
image = "0.25.6"
png = "0.17.16"
base64 = "0.22.1"
anyhow = "1.0.98"
blake3 = "1.8.2"
eframe = "0.32.0"
egui = "0.32.0"
crossbeam = "0.8.4"
tray-icon = "0.21.1"
gtk = "0.18.2"
global-hotkey = "0.7.0"
home = "0.5.11"
aes-gcm = "0.10.3"
aead = "0.5.2"
argon2 = "0.5.3"
secrecy = "0.10.3"
zeroize = "1.8.1"
once_cell = "1.21.3"
getrandom = "0.3.3"
rand = "0.8"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
